Gestion de l'animation

--- a/src/assets/scss/engine/components/_context.scss
+++ b/src/assets/scss/engine/components/_context.scss
@@ -7,7 +7,7 @@
 	right: 0;
 	overflow: hidden;
 
-    &.--outputCreated:not(.--outputUsed) {
+    .outputViewport.--outputInitialize &.--outputCreated:not(.--outputUsed) {
         display: none !important;
     }
 }	
