--- a/src/assets/scss/engine/components/_viewport.scss
+++ b/src/assets/scss/engine/components/_viewport.scss
@@ -7,4 +7,20 @@
 	background-color: #fff;
 	width: 100%;
 	height: 100%;
+
+	&::before {
+		content: '';
+		display: block;
+		position: fixed;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		z-index: 10000;
+		background-color: White;
+	}
+	
+	&.--outputInitialize::before {
+		display: none;
+	}
 }
