--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -93,7 +93,7 @@
         display: flex;
         justify-content: center;
         align-items: flex-end;
-        box-shadow: 0 0 0 1px black;
+        /*box-shadow: 0 0 0 1px black;*/
 
         &_Blur {
             display: block;
@@ -137,7 +137,7 @@
 
         .Battle__History {
             position: absolute;
-            top: 0;
+            top: 175px;
             bottom: 0;
             width: 175px;
             display: flex;
@@ -182,6 +182,27 @@
                 }
             }
 
+            &.--freeze {
+                &_pair {
+                    .Battle__Character_Sprite {
+                        transform: translateX(-4px) !important;
+                    }
+
+                    &.--reverse .Battle__Character_Sprite {
+                        transform: scaleX(-1) translateX(-4px) !important;
+                    }
+                }
+                &_impair {
+                    .Battle__Character_Sprite {
+                        transform: translateX(4px) !important;
+                    }
+
+                    &.--reverse .Battle__Character_Sprite {
+                        transform: scaleX(-1) translateX(4px) !important;
+                    }
+                }
+            }
+
             &_PositionBox,
             &_HurtBox,
             &_HitBox {
@@ -204,6 +225,10 @@
             
             &.--guard .Battle__Character_HurtBox{
                 background-color: plum;
+            }
+            
+            &.--hit .Battle__Character_HurtBox{
+                background-color: orange;
             }
 
             &_HitBox {
