--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -132,6 +132,7 @@
             &.--right::before,
             &.--right .Battle__History {
                 left: 100%;
+                text-align: right;
             }
         }
 
