--- a/src/assets/scss/game/components/_menu.scss
+++ b/src/assets/scss/game/components/_menu.scss
@@ -8,7 +8,7 @@
         display: block;
         margin: 1px auto;
         padding: 10px 25px;
-        font-size: 1.25rem;
+        font-size: 1.5em;
     }
 
     &.Menu__nb_cursor_1 {
