--- a/src/assets/scss/game/layout/_select.scss
+++ b/src/assets/scss/game/layout/_select.scss
@@ -7,7 +7,7 @@
 	padding: 20px;
     
     h1 {
-        font-size: 5rem;
+        font-size: 7em;
         margin: 0;
     }
 
@@ -42,12 +42,12 @@
             }
             
             &_Character_Name {
-                font-size: 2rem;
+                font-size: 2.5em;
                 margin: 0;
             }
 
             &_Number {
-                font-size: 1.25rem;
+                font-size: 1.5em;
                 margin: 0;
                 color: DarkGray;
             }
@@ -93,7 +93,7 @@
         }
             
         .Select__Stage_Name {
-            font-size: 1.25rem;
+            font-size: 1.5em;
             margin: 0;
             color: DarkGray;
             text-align: center;
