--- a/src/assets/scss/game/layout/_settings.scss
+++ b/src/assets/scss/game/layout/_settings.scss
@@ -7,7 +7,7 @@
 	padding: 20px;
 
     h1 {
-        font-size: 5rem;
+        font-size: 7em;
     }
     
     .Setting__Players {
@@ -20,7 +20,7 @@
             margin: 0 25px;
         
             &_Number {
-                font-size: 2rem;
+                font-size: 2.5em;
             }
 
             .Setting__Button {
