--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -12,22 +12,28 @@
     left: 0;
     right: 0;
     z-index: 1000;
+
+    .Battle__Interface_Wrapper {
+        max-width: 1024px;
+        margin: 0 auto;
+        padding: 50px;
+    }
 }
+
 
 .Battle__HUDs {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    padding: 25px 0;
 }
 
 .Battle__HUD {
+    flex: 1 1 auto;
     display: flex;
     align-items: flex-start;
-    margin: 0 50px;
 
     &:last-child {
-        order: 2;
+        justify-content: flex-end;
 
         .Battle__HUD_Sprite {
             order: 1;
@@ -119,8 +125,10 @@
     display: none;
     justify-content: center;
     align-items: center;
-    width: 1200px;
-    margin: 25px auto;
+    position: absolute;
+    top: 200px;
+    left: 0;
+    right: 0;
 
     .--info & {
         display: flex;
@@ -134,6 +142,29 @@
     &_Text {
         text-transform: capitalize;
         font-size: 7em;
+    }
+}
+
+.Battle__Combo {
+    display: flex;
+    margin: 50px 0;
+    align-items: center;
+
+    &_Text {
+        flex: 1 1 auto;
+        font-size: 2.5em;
+        opacity: 0;
+        transition: opacity 1s ease;
+        padding: 4px;
+
+        &.--show {
+            opacity: 1;
+            transition: none;
+        }
+
+        &:last-child {
+            text-align: right;
+        }
     }
 }
 
