--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -129,6 +129,7 @@
     top: 200px;
     left: 0;
     right: 0;
+    z-index: 1000;
 
     .--info & {
         display: flex;
@@ -154,7 +155,7 @@
         flex: 1 1 auto;
         font-size: 2.5em;
         opacity: 0;
-        transition: opacity 1s ease;
+        transition: opacity 2s ease;
         padding: 4px;
 
         &.--show {
