--- a/src/pages/_templates/game/_main.njk
+++ b/src/pages/_templates/game/_main.njk
@@ -1,5 +1,5 @@
 {% block main %}
-    <main class="outputViewport">
+    <main id="VW__Game" class="outputViewport">
         {% block main_content %}{% endblock %}
     </main>
 {% endblock %}
