Ajout Scene INIT Gestion INIT Settings

--- a/src/assets/scss/game/layout/_initialize.scss
+++ b/src/assets/scss/game/layout/_initialize.scss
@@ -10,8 +10,10 @@
         font-size: 7em;
     }
 
-    h2 {
-        font-size: 2.5em;
+    span {
+        display: block;
+        text-align: center;
+        font-size: 1.5em;
         color: DarkGray;
     }
 }
