Optimisation BATTLE et Menu en TRAINING

--- a/src/assets/scss/game.scss
+++ b/src/assets/scss/game.scss
@@ -15,6 +15,7 @@
 	'game/layout/menu',
 	'game/layout/select',
 	'game/layout/battle',
+	'game/layout/training',
 	'game/layout/settings';
 
 /* components */
