--- a/src/assets/scss/game/layout/_battle.scss
+++ b/src/assets/scss/game/layout/_battle.scss
@@ -11,12 +11,15 @@
     top: 0;
     left: 0;
     right: 0;
+    bottom: 0;
     z-index: 1000;
 
     .Battle__Interface_Wrapper {
         max-width: 1024px;
         margin: 0 auto;
         padding: 50px;
+        position: relative;
+        height: 100%;
     }
 }
 
@@ -85,45 +88,6 @@
             }
         }
     }
-
-    &_Animation {
-        position: absolute;
-        left: 4px;
-        right: 4px;
-        line-height: 5px;
-
-        .--versus & {
-            display: none;
-        }
-
-        span {
-            display: inline-block;
-            width: 4px;
-            height: 4px;
-            margin: 1px;
-            background-color: Lime;
-
-            &.--freeze {
-                background-color: deepskyblue;
-            }
-            
-            &.--guard {
-                background-color: plum;
-            }
-
-            &.--damage {
-                background-color: Red;
-            }
-
-            &.--invulnerable {
-                background-color: White;
-            }
-
-            &.--hit {
-                background-color: orange;
-            }
-        }
-    }
 }
 
 .Battle__Info {
@@ -131,10 +95,10 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    top: 200px;
+    top: 300px;
     left: 0;
     right: 0;
-    z-index: 1000;
+    z-index: 500;
 
     .--info & {
         display: flex;
@@ -223,8 +187,7 @@
         }
 
         &.--left,
-        &.--left::before,
-        &.--left .Battle__History {
+        &.--left::before {
             right: 100%;
         }
         
@@ -233,52 +196,9 @@
         }
         
         &.--right,
-        &.--right::before,
-        &.--right .Battle__History {
+        &.--right::before {
             left: 100%;
             text-align: right;
-        }
-    }
-}
-
-.Battle__History {
-    position: absolute;
-    top: 175px;
-    bottom: 0;
-    width: 175px;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: flex-end;
-
-    .--versus & {
-        display: none;
-    }
-
-    span {
-        padding: 5px;
-
-        b {
-            padding: 13px 0 0 8px;
-            color: White;
-            background-color: Black;
-            margin: 0 2px;
-            display: inline-block;
-            width: 25px;
-            height: 25px;
-            line-height: 0;
-            border-radius: 50%;
-            text-align: left;
-
-            &.--dir {
-                font-family: monospace;
-                font-size: 1.6em;
-            }
-        }
-            
-        i {
-            color: DarkGray;
-            padding: 0 5px;
-            font-style: normal;
         }
     }
 }
@@ -324,42 +244,5 @@
                 transform: scaleX(-1) translate(4px, -50%) !important;
             }
         }
-    }
-    
-
-    &_PositionBox,
-    &_HurtBox,
-    &_HitBox {
-        position: absolute;
-        width: 0;
-        height: 0;
-        left: 98px;
-        top: 182px;
-        opacity: 0.5;
-        box-shadow: 0 0 0 1px Black;
-
-        .--versus & {
-            display: none;
-        }
-    }
-
-    &_PositionBox {
-        background-color: deepskyblue;
-    }
-
-    &_HurtBox {
-        background-color: Lime;
-    }
-    
-    &.--guard .Battle__Character_HurtBox{
-        background-color: plum;
-    }
-    
-    &.--hit .Battle__Character_HurtBox{
-        background-color: orange;
-    }
-
-    &_HitBox {
-        background-color: red;
     }
 }
