Gestion Menu PARAMETERS en TRAINING

--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -47,6 +47,10 @@
             margin-left: 25px;
         }
     }
+
+    &_Parameters {
+        min-width: 400px !important; 
+    }
 }
 
 // History
