--- a/src/assets/scss/game/layout/_menu.scss
+++ b/src/assets/scss/game/layout/_menu.scss
@@ -8,6 +8,12 @@
 
     h1 {
         font-size: 7em;
+
+        span {
+            display: block;
+            font-size: 10px;
+            color: DarkGray;
+        }
     }
 
     ul {
