--- a/src/assets/scss/game/layout/_loading.scss
+++ b/src/assets/scss/game/layout/_loading.scss
@@ -8,5 +8,18 @@
 
     h1 {
         font-size: 7em;
+
+        span {
+            display: block;
+            font-size: 10px;
+            color: DarkGray;
+        }
+    }
+
+    span {
+        display: block;
+        text-align: center;
+        font-size: 1.5em;
+        color: DarkGray;
     }
 }
