--- a/src/assets/scss/game/layout/_training.scss
+++ b/src/assets/scss/game/layout/_training.scss
@@ -108,40 +108,42 @@
 // Box
 .Battle__Character {
 
-    .Training__PositionBox,
-    .Training__HurtBox,
-    .Training__HitBox {
+    .Training__Box {
         position: absolute;
-        width: 0;
-        height: 0;
-        left: 98px;
-        top: 182px;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         opacity: 0.5;
-        box-shadow: 0 0 0 1px Black;
-        display: none;
-        
-        .--bBox & {
-            display: block;
+
+        & > * {
+            display: none;
+            position: absolute;
+            box-shadow: 0 0 0 1px Black;
+            
+            .--bBox &{
+                display: block;
+            }
         }
     }
     
-    .Training__PositionBox {
+    .Training__PositionBox > *{
         background-color: deepskyblue;
     }
     
-    .Training__HurtBox {
+    .Training__HurtBox > *{
         background-color: Lime;
     }
     
-    &.--guard .Training__HurtBox{
+    &.--guard .Training__HurtBox > *{
         background-color: plum;
     }
     
-    &.--hit .Training__HurtBox{
+    &.--hit .Training__HurtBox > *{
         background-color: orange;
     }
     
-    .Training__HitBox {
+    .Training__HitBox > *{
         background-color: red;
     }
 }
